@@ -1,3 +1,9 @@
+linuxmuster-prepare (0.4.0-0ubuntu0) lmn7-testing; urgency=low
+
+  * added opsi support.
+
+ -- Thomas Schmitt <thomas@linuxmuster.net>  Tue, 13 Feb 2018 16:54:15 +0100
+
 linuxmuster-prepare (0.3.0-0ubuntu0) lmn7-testing; urgency=low
 
   * hostname consolidation, fixed hostnames docker, opsi, ubuntu, only a server
